--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 path = "src-rs/lib.rs"
 
 [dependencies]
-axum = { version = "0.8.1", features = ["macros"] }
+actix-web = "4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
