--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ path = "src-rs/lib.rs"
 
 [dependencies]
 actix-web = "4.4"
+actix-cors = "0.7.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
