--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 dotenvy = "0.15"
+tracing-log = "0.1"
